# B.32.darwin-op-api

./: README.md
controllers/: Makefile
controllers/walk_controller/: main.cpp  walk_controller.cpp
controllers/walk_controller_mongodb/: CMakeLists.txt  Makefile  Makefile.robotis-op2  config.ini  main.cpp  walk_controller_mongodb.cpp  walk_controller_mongodb.hpp
libraries/python/: _managers.pyd
libraries/python37/: _managers.pyd
libraries/python38/: _managers.pyd
walk_controller_mongodb/: Makefile  config.ini
worlds/: walk.wbt
